2010-08-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15547: htmlArea RTE may load extJS debug script in FE which makes page loading slow
	* Updated htmlArea RTE manual.

2010-08-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15439: htmlArea RTE: Deprecated call-time pass-by-reference

20010-08-24  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #13623: Deprecation log for IMAGE.alttext does not work (Thanks to Sebastian Michaelsen)

2010-08-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12583: htmlArea RTE: RTE fails to load due to security error

2010-08-23  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15092: Ajax loaded items of inline records are encoded twice (Thanks to Martin Borer)

2010-08-23  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15526: No recipient is logged to syslog if sending of mail failed in t3lib_utility_Mail (Thanks to Helmut Hummel)

2010-08-22  Francois Suter  <francois@typo3.org>

	* Fixed bug #14949: "View Item" does not resolve real MM-relations (thanks to Caspar Stuebs)

2010-08-20  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug Fixed bug #15514 Bugfix : wrong encoded confirm message in User Admin Module (Thanks to Sven Juergens)
	* Fixed bug #15507: Bug: MEDIA content element ignores stdWrap configuration (Thanks to Jigal van Hemert)

2010-08-19  Ingo Renner  <ingo@typo3.org>

	* Follow-up to #15079: XCLASS include code missing and private declaration in t3lib_SpriteManager

2010-08-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15505: t3lib_cache_backend_TransientMemoryBackend is not referenced

2010-08-19  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15494: fatal error in phpunit BE module

2010-08-19  Francois Suter  <francois@typo3.org>

	* Fixed bug #15241: Recognize php-fpm sapi for path generation (thanks to Nikolas Hagelstein)

2010-08-15  Steffen Kamper  <steffen@typo3.org>
